# citizens-info-rag-system

./: .dockerignore  Dockerfile  docker-compose.deploy.yml  docker-compose.yml  environment.yml  info.md  kpn-uallende-gpu-ec2.pem  main.py  notebook.ipynb  pyproject.toml  quickstart.py  requirements.txt  test_memory.py  vector_manipulation.ipynb  vectorization_manual.ipynb  vectorization_with_api.ipynb  weaviate_client_test.ipynb  weviate-docker.py
app/: article_scrap.py  articles_scrap.py  config.py  constants.py  init_data.py  main.py  path.py  pyproject.toml  rag.py  token_test.py  weaviate_utils.py
notebooks/: end_to_end_rag.ipynb  giskard.ipynb  llm_answer.ipynb  selenium.ipynb  stiched_docs.txt  test.ipynb  test_set_df.pkl  vectorization_manual.ipynb  vectorization_manual_sentence_transf.ipynb  vectorization_with_api.ipynb  weaviate_client_test.ipynb  web_scrap.ipynb
tests/: env_tests.py  quickstart.py  shards_test.py  test_conn.py
