[tool.poetry]
name = "citizens-info"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
streamlit = "^1.33.0"
weaviate-client = "^4.5.5"
transformers = "^4.40.0"
sentence-transformers = "^2.7.0"
bitsandbytes = "^0.43.1"
accelerate = "^0.29.3"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.34"
langchain = "^0.1.16"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
